--- a/contents/card.css
+++ b/contents/card.css
@@ -12,7 +12,7 @@
   background-color: magenta;
 
   /* Define size */
-  width: 0;
+  width: 300pt;
   height: 500pt;
 
   /* Stretches to fill entire region */
